[add] BootStrap-Selectを追加してコンテスト選択ページの雛形を作成

--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -1,3 +1,19 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
+<h1>コンテストを選択してください</h1>
+<select class="selectpicker">
+    <optgroup label="開催中">
+    </optgroup>
+    <optgroup label="終了">
+    </optgroup>
+</select>
+
+@section Styles
+{
+    @Styles.Render("/Content/bootstrap-select.min.css")
+}
+@section Scripts
+{
+    @Scripts.Render("/Scripts/bootstrap-select.min.js")     
+}
