[fix] URLが間違っていた問題を修正

--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -11,6 +11,6 @@
 }
 @section Scripts
 {
-    @Scripts.Render("/contestselector.js")
-    @Scripts.Render("/Scripts/bootstrap-select.min.js")
+    @Scripts.Render("/scripts/contestselector.js")
+    @Scripts.Render("/scripts/bootstrap-select.min.js")
 }
