[fix] Stylesのsが抜けていた誤字

--- a/ac-predictor/Views/Shared/_Layout.cshtml
+++ b/ac-predictor/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("/content/bootstrap.min.css")
     @Styles.Render("/content/site.css")
-    @RenderSection("style", required: false)
+    @RenderSection("styles", required: false)
     @Scripts.Render("/scripts/modernizr-2.8.3.js")
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
