[change] urlの位置を変えた

--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 <h1>コンテストを選択してください</h1>
-<form action="/contestresult" method="get">
+<form action="/contestresult/standings" method="get">
     <select class="selectpicker" name="contestid" id="contestselector"></select>
     <button class="btn btn-primary">確定</button>
 </form>
