--- a/ac-predictor/Content/Base.css
+++ b/ac-predictor/Content/Base.css
@@ -15,3 +15,15 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*user*/
+.user-red {color:#FF0000;}
+.user-orange {color:#FF8000;}
+.user-yellow {color:#C0C000;}
+.user-blue {color:#0000FF;}
+.user-cyan {color:#00C0C0;}
+.user-green {color:#008000;}
+.user-brown {color:#804000;}
+.user-gray {color:#808080;}
+.user-unrated {color:#000000;}
+.user-admin {color:#C000C0;}
