[change] 計算に外部JSを使うよう変更

--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -25,6 +25,7 @@
 }
 @section Scripts
 {
+    @Scripts.Render("https://koba-e964.github.io/atcoder-rating-estimator/atcoder_rating.js")
     @Scripts.Render("/scripts/contestselector.js")
     @Scripts.Render("/scripts/bootstrap-select.min.js")
     @Scripts.Render("/scripts/drawcontesttable.js")
