--- a/ac-predictor/Views/Home/Index.cshtml
+++ b/ac-predictor/Views/Home/Index.cshtml
@@ -3,3 +3,12 @@
     <p class="lead">コンテスト中にリアルタイムで推定パフォーマンスを確認することが可能です。<br>ユーザースクリプトをインストールすると、コンテストページ上で情報を確認可能です。</p>
     <p><a href="/install" class="btn btn-primary btn-lg">インストール</a><a href="/contestresult" class="btn btn-default btn-lg">またはページ上で閲覧</a></p>
 </div>
+
+        <div class="card">
+            <h5 class="card-header">Featured</h5>
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
