[add] トップページに機能詳細を追加

--- a/ac-predictor/Views/Home/Index.cshtml
+++ b/ac-predictor/Views/Home/Index.cshtml
@@ -4,11 +4,25 @@
     <p><a href="/install" class="btn btn-primary btn-lg">インストール</a><a href="/contestresult" class="btn btn-default btn-lg">またはページ上で閲覧</a></p>
 </div>
 
+<div class="row">
+    <div class="col-sm-4">
         <div class="card">
-            <h5 class="card-header">Featured</h5>
+            <h5 class="card-header">UserScript</h5>
             <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">AtCoderをより便利に</h5>
+                <p class="card-text">Predictorと同時に、様々な便利機能を使えるようになります。</p>
+                <a href="/install" class="btn btn-primary">詳細</a>
             </div>
         </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <h5 class="card-header">通知</h5>
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text">コンテストのリマインド、レーティングの更新通知等を受け取れます。</p>
+                <a href="#" class="btn btn-primary">詳細</a>
+            </div>
+        </div>
+    </div>
+</div>
