[fix] 幅を固定、表示を綺麗に

--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "Index";
 }
 <form class="form-inline">
-    <select class="form-control-lg" id="contest-selector"></select>
-    <button type="button" class="btn btn-primary btn-lg" id="confirm-btn">確定</button>
+    <select class="form-control-lg col-sm-5" id="contest-selector"></select>
+    <button type="button" class="btn btn-primary btn-lg col-sm-2" id="confirm-btn">確定</button>
 </form>
 
 <table class="table table-bordered table-striped table-hover th-center td-center td-middle" id="standings">
