[change] トップページにメッセージを追加、微修正

--- a/ac-predictor/Views/Home/Index.cshtml
+++ b/ac-predictor/Views/Home/Index.cshtml
@@ -9,19 +9,17 @@
         <div class="card">
             <h5 class="card-header">UserScript</h5>
             <div class="card-body">
-                <h5 class="card-title">AtCoderをより便利に</h5>
-                <p class="card-text">Predictorと同時に、様々な便利機能を使えるようになります。</p>
+                <p class="card-text">AtCoderをより便利に。Predictorと同時に、様々な便利機能を使えるようになります。</p>
                 <a href="/install" class="btn btn-primary">詳細</a>
             </div>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="card">
-            <h5 class="card-header">通知</h5>
+            <h5 class="card-header">Notification</h5>
             <div class="card-body">
-                <h5 class="card-title"></h5>
-                <p class="card-text">コンテストのリマインド、レーティングの更新通知等を受け取れます。</p>
-                <a href="#" class="btn btn-primary">詳細</a>
+                <p class="card-text">タブを開いていなくても、コンテストのリマインドはもちらんレーティングの更新通知等も受け取れます。</p>
+                <a href="#" class="btn btn-primary disabled">開発中</a>
             </div>
         </div>
     </div>
