--- a/ac-predictor/Views/Shared/_Layout.cshtml
+++ b/ac-predictor/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
     @Scripts.Render("/scripts/modernizr-2.8.3.js")
     @Scripts.Render("/scripts/jquery-3.3.1.min.js")
-    @Scripts.Render("/scripts/popper.min.js")
+    @Scripts.Render("/scripts/umd/popper.min.js")
     @Scripts.Render("/scripts/bootstrap.min.js")
     @Scripts.Render("/scripts/base.js")
     @RenderSection("scripts", required: false)
