--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -2,10 +2,12 @@
 @{
     ViewBag.Title = "Index";
 }
-<div class="row my-2">
-    <form class="form-inline">
-        <select class="form-control col-sm-5" id="contest-selector"></select>
-        <button type="button" class="btn btn-primary col-sm-2" id="confirm-btn">確定</button>
+<div class="my-2">
+    <form class="form-group row my-0">
+        <select class="form-control col-sm-6 col-md-5 col-lg-4" id="contest-selector"></select>
+        <button type="button" class="btn btn-primary col-sm-3 col-md-2" id="confirm-btn">確定</button>
+    </form>
+    <form class="form-group row">
         <div class="custom-control custom-checkbox my-1 mx-2">
             <input type="checkbox" class="custom-control-input" id="show-unrated">
             <label class="custom-control-label" for="show-unrated" data-toggle="tooltip" title="表示のみで、その人の存在は計算に反映されません。" id="show-unrated-description">unratedな参加者を表示する</label>
