[fix] 誤字の修正

--- a/ac-predictor/Views/Home/Index.cshtml
+++ b/ac-predictor/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="card">
             <h5 class="card-header">Notification</h5>
             <div class="card-body">
-                <p class="card-text">タブを開いていなくても、コンテストのリマインドはもちらんレーティングの更新通知等も受け取れます。</p>
+                <p class="card-text">タブを開いていなくても、コンテストのリマインドはもちろんレーティングの更新通知等も受け取れます。</p>
                 <a href="#" class="btn btn-primary disabled">開発中</a>
             </div>
         </div>
