[change] UserScriptのインストールページを変更

--- a/ac-predictor/Views/Home/Index.cshtml
+++ b/ac-predictor/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="jumbotron">
     <h1>ac-predictor</h1>
     <p class="lead">コンテスト中にリアルタイムで推定パフォーマンスを確認することが可能です。<br>ユーザースクリプトをインストールすると、コンテストページ上で情報を確認可能です。</p>
-    <p><a href="/install" class="btn btn-primary btn-lg">インストール</a><a href="/contestresult" class="btn btn-default btn-lg">またはページ上で閲覧</a></p>
+    <p><a href="/userscript/install" class="btn btn-primary btn-lg">インストール</a><a href="/contestresult" class="btn btn-default btn-lg">またはページ上で閲覧</a></p>
 </div>
 
 <div class="row">
@@ -10,7 +10,7 @@
             <h5 class="card-header">UserScript</h5>
             <div class="card-body">
                 <p class="card-text">AtCoderをより便利に。Predictorと同時に、様々な便利機能を使えるようになります。</p>
-                <a href="/install" class="btn btn-primary">詳細</a>
+                <a href="/userscript/install" class="btn btn-primary">詳細</a>
             </div>
         </div>
     </div>
