[add] UserScriptの紹介ページを追加

--- a/ac-predictor/Views/Home/Index.cshtml
+++ b/ac-predictor/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <h5 class="card-header">UserScript</h5>
             <div class="card-body">
                 <p class="card-text">AtCoderをより便利に。Predictorと同時に、様々な便利機能を使えるようになります。</p>
-                <a href="/userscript/install" class="btn btn-primary">詳細</a>
+                <a href="/userscript" class="btn btn-primary">詳細</a>
             </div>
         </div>
     </div>
