[change] 警告を表示する位置を変更

--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -10,9 +10,8 @@
     <form class="form-row my-0">
         <input class="form-control col-sm-6 col-md-5 col-lg-4" id="username-search-input">
         <button type="button" class="btn  col-sm-3 col-md-2 btn-outline-secondary" id="username-search-button">ユーザーを検索</button>
+        <div class="invalid-feedback" id="username-search-alert"></div>
     </form>
-    <div class="alert alert-warning username-search-alert no-input" style="display: none;">ユーザー名を入力してください</div>
-    <div class="alert alert-warning username-search-alert not-found" style="display: none;">ユーザー名が見つかりませんでした</div>
     <form class="form-group row">
         <div class="custom-control custom-checkbox my-1 mx-2">
             <input type="checkbox" class="custom-control-input" id="show-unrated">
@@ -43,5 +42,4 @@
 {
     @Scripts.Render("https://koba-e964.github.io/atcoder-rating-estimator/atcoder_rating.js")
     @Scripts.Render("/scripts/contestselector.js")
-    @Scripts.Render("/scripts/usernamesearch.js")
 }
