--- a/ac-predictor/Views/ContestResult/Index.cshtml
+++ b/ac-predictor/Views/ContestResult/Index.cshtml
@@ -3,21 +3,21 @@
     ViewBag.Title = "Index";
 }
 <div class="my-2">
-    <form class="form-row my-0">
+    <div class="form-row my-0">
         <select class="form-control col-sm-6 col-md-5 col-lg-4" id="contest-selector"></select>
         <button type="button" class="btn col-sm-3 col-md-2 btn-primary" id="confirm-btn">確定</button>
-    </form>
-    <form class="form-row my-0">
+    </div>
+    <div class="form-row my-0">
         <input class="form-control col-sm-6 col-md-5 col-lg-4" id="username-search-input">
         <button type="button" class="btn  col-sm-3 col-md-2 btn-outline-secondary" id="username-search-button">ユーザーを検索</button>
         <div class="invalid-feedback" id="username-search-alert"></div>
-    </form>
-    <form class="form-group row">
+    </div>
+    <div class="form-group row">
         <div class="custom-control custom-checkbox my-1 mx-2">
             <input type="checkbox" class="custom-control-input" id="show-unrated">
             <label class="custom-control-label" for="show-unrated" data-toggle="tooltip" title="表示のみで、その人の存在は計算に反映されません。" id="show-unrated-description">unratedな参加者を表示する</label>
         </div>
-    </form>
+    </div>
 </div>
 <div class="row my-2">
     <table class="table table-bordered table-striped table-hover th-center td-center td-middle" id="standings">
