--- a/src/libs/sidemenu/sidemenu.scss
+++ b/src/libs/sidemenu/sidemenu.scss
@@ -9,6 +9,7 @@ $menu-width: 350px;
     display: block;
     position: fixed;
     top: 0;
+    z-index: 20;
     width: $key-width + $menu-width;
     right: -$menu-width;
     transition: all 150ms 0ms ease;
@@ -68,11 +69,6 @@ $menu-width: 350px;
     transition: all 300ms 0s ease;
 }
 
-.menu-content {
-    padding: 10px 20px 10px 20px;
-    transition: all 300ms 0s ease;
-}
-
 .menu-box-collapse {
     height: 0px !important;
  
@@ -81,3 +77,7 @@ $menu-width: 350px;
     }
 }
 
+.menu-content {
+    padding: 10px 20px 10px 20px;
+    transition: all 300ms 0s ease;
+}
