[add] navbarがfixedなときのz-indexを修正

--- a/src/libs/sidemenu/sidemenu.scss
+++ b/src/libs/sidemenu/sidemenu.scss
@@ -81,3 +81,7 @@ $menu-width: 350px;
     padding: 10px 20px 10px 20px;
     transition: all 300ms 0s ease;
 }
+
+.cnvtb-fixed{
+    z-index: 19;
+}
