--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar-top">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="navbar-brand" href="{{ "/userscript" | relative_url }}">AtCoder上で見る</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ "/userscript" | relative_url }}">AtCoder上で見る</a></li>
             <li class="nav-item"><a class="nav-link" href="https://github.com/key-moon/ac-predictor">GitHub</a></li>
         </ul>
     </div>
