--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ / | relative_url }}">ac-predictor</a>
+    <a class="navbar-brand" href="{{ "/" | relative_url }}">ac-predictor</a>
     <div class="navbar-header">
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-top" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
             <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
     <div class="navbar-collapse collapse" id="navbar-top">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" href="{{ "/userscript" | relative_url }}">AtCoder上で見る</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://github.com/key-moon/ac-predictor">GitHub</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ site.repository }}">GitHub</a></li>
         </ul>
     </div>
 </nav>
