--- a/ac-predictor-extension/src/libs/sidemenu/sidemenu.scss
+++ b/ac-predictor-extension/src/libs/sidemenu/sidemenu.scss
@@ -1,4 +1,4 @@
-﻿$navbar-height: 50px;
+$navbar-height: 50px;
 
 $sidemenu-opacity: 0.85;
 
@@ -85,3 +85,15 @@ $menu-width: 350px;
 .cnvtb-fixed{
     z-index: 19;
 }
+
+/*色*/
+.user-red {color:#FF0000;}
+.user-orange {color:#FF8000;}
+.user-yellow {color:#C0C000;}
+.user-blue {color:#0000FF;}
+.user-cyan {color:#00C0C0;}
+.user-green {color:#008000;}
+.user-brown {color:#804000;}
+.user-gray {color:#808080;}
+.user-unrated {color:#000000;}
+.user-admin {color:#C000C0;}
