--- a/addon/src/view/config/modal.html
+++ b/addon/src/view/config/modal.html
@@ -3,7 +3,7 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-			<h4 class="modal-title">ac-predictor設定</h4>
+			<h4 class="modal-title">{config_header_text}</h4>
 		</div>
 		<div class="modal-body">
 			<div class="container-fluid">
